--- a/styles.css
+++ b/styles.css
@@ -436,13 +436,13 @@ img {
   box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
 }
 
-/* Stiluri pentru titlu */
+/*titlu */
 .heading-todo h1 {
   text-align: center; 
   color: #333; 
 }
 
-/* Stiluri pentru formă și butoane */
+
 .form {
   width: 100%;
   display: flex;
@@ -459,16 +459,16 @@ img {
 
 @media (max-width: 393px) {
   .home__title, .home__data {
-    text-align: center; /* Centrarea titlului și a datelor din Home */
+    text-align: center;
     width: 100%;
     margin: 0 auto;
   }
 
   .skills__container, .skills__text {
-    text-align: center; /* Centrarea textului din secțiunea Skills */
+    text-align: center; 
   }
   .nav {
-    padding: 0; /* Elimină padding-ul pentru a economisi spațiu */
+    padding: 0; 
   }
 
   .nav__list {
@@ -476,41 +476,41 @@ img {
     justify-content: center; 
     align-items: center;
     width: 100%;
-    margin: 0; /* Elimină marginile */
-    padding: 0; /* Elimină padding-ul */
+    margin: 0; 
+    padding: 0; 
   }
 
   .nav__item {
     flex-grow: 1;
-    margin: 0; /* Elimină marginile */
-    padding: 0; /* Elimină padding-ul */
+    margin: 0; 
+    padding: 0; 
   }
 
   .nav__link {
     font-size: 0.6rem;
     display: block;
     width: 100%;
-    padding: 5px; /* Adaugă padding doar pentru a îmbunătăți accesibilitatea */
+    padding: 5px; 
   }
 
   .nav__toggle {
     font-size: 0.9rem;
     position: absolute;
-    right: 5px; /* Poziționează butonul mai aproape de margine pentru a economisi spațiu */
+    right: 5px; 
     top: 50%;
     transform: translateY(-50%);
     padding: 5px;
   }
 
   .l-header {
-    height: auto; /* Ajustează înălțimea header-ului */
-    padding: 5px 0; /* Adaugă padding vertical pentru a menține elementele aliniate */
+    height: auto; 
+    padding: 5px 0;
   }
 
   .home__img {
-    height: auto; /* Asigură-te că imaginea este scalată corect */
-    width: 100%; /* Limitază lățimea la 100% */
-    position: static; /* Elimină poziționarea absolută dacă nu este necesară */
+    height: auto; 
+    width: 100%; 
+    position: static; 
     display: flex;
     justify-content: center;
   }
@@ -520,9 +520,9 @@ img {
     justify-content: center;
     width: 100%;
     margin-top: var(--mb-2);
-    font-size: 1.5rem; /* Reduc dimensiunea iconițelor */
+    font-size: 1.5rem; 
     margin: 0;
-    padding: 3px; /* Menține un padding mic pentru accesibilitate */
+    padding: 3px; 
   }
 
   .home__social {
@@ -533,8 +533,8 @@ img {
 
   .work__container, .skills__data, .contact__container, .footer, .form, .ToDoButton {
     width: 100%;
-    padding: 0 10px; /* Adaugă un padding mic pentru a preveni overflow-ul */
-    text-align: center; /* Centrează textul */
+    padding: 0 10px;
+    text-align: center; 
   }
   .footer{
     height: 70px;
@@ -543,14 +543,22 @@ img {
     grid-template-columns: 1fr;
   }
   .form input, .form button, .ToDoButton {
-    width: 100%; /* Asigură-te că elementele de formular nu depășesc lățimea containerului */
-    margin: 5px auto; /* Centrează-le orizontal */
-    padding: 10px; /* Adaugă padding pentru ușurința utilizării */
+    width: 100%; 
+    margin: 5px auto; 
+    padding: 10px; 
   }
 
   .popup-inner {
-    width: 90%; /* Reduc lățimea la 90% pentru a preveni overflow-ul */
-    margin: 0 auto; /* Centrează fereastra popup */
-    padding: 15px; /* Adaugă padding pentru estetică */
+    width: 90%; 
+    margin: 0 auto; 
+    padding: 15px; 
+  }
+  .popup-close-button {
+    position: absolute;
+    right: 10px; 
+    top: 10px; 
+    font-size: 0.5rem; 
+    padding: 8px 16px; 
+    z-index: 1051; 
   }
 }
